RELEASE 0.6.6 ()
CHANGES SINCE 0.6.5
===============================================================================
MAJOR CHANGES:
 * Started generating debian packages for Dwarf Therapist.  See wiki for repositories
BUG FIXES:
 * Fixed issue 297 - Unable to run DT on Ubuntu 10-10
 * Fixed issue 298 - Unable to connect DT to DF (ptrace issue)
 * Fixed issue 263 - Tabs not showing up
 * Fixed issue 247 - No compiling instructions
 * Fixed issue 291 - Compilation errors in qt 4.7
 * Fixed issue 301 - Ghostly Dwarves appear on DT

RELEASE 0.6.5 (November 11, 2010)
CHANGES SINCE 0.6.4
===============================================================================
MAJOR CHANGES:
 * Support for 0.31.17 (graphics + legacy versions)
 * Fixed Dwarf Race Index scanning on linux
 * Added a new Layout Wizard feature for creating new layouts
	Basically, when you get the version not found message, click ok, connect, then
	scan memory.  From there, click the Create New Layout, type in the new version and filename, and
	select the most recent file.  If the dwarf offsets haven't change, it should generate the layout
	for you automatically.  Follow instructions in GUI.
 * Fixed issue 295 - Importing asks for incorrect file extension

RELEASE 0.6.4 (October 4, 2010)
CHANGES SINCE 0.6.3
===============================================================================
MAJOR CHANGES:
 * Support for 0.31.16 (graphics + legacy versions)
 

RELEASE 0.6.3 (October 3, 2010)
CHANGES SINCE 0.6.2
===============================================================================
MAJOR CHANGES:
 * Support for 0.31.15 (graphics + legacy versions)
 

RELEASE 0.6.2 (September 13, 2010)
CHANGES SINCE 0.6.1
===============================================================================
MAJOR CHANGES:
 * Support for 0.31.14 (graphics + legacy versions)
BUG FIXES:
 * Fixed problem with scanning functions for determining new layouts.


RELEASE 0.6.1 (September 18, 2010)
CHANGES SINCE 0.6.0