@@ -26,6 +26,7 @@ THE SOFTWARE.
 #include "dwarfmodelproxy.h"
 #include "dwarfmodel.h"
 #include "dwarf.h"
+#include "profession.h"
 #include "defines.h"
 #include "dwarftherapist.h"
 #include "mainwindow.h"
@@ -60,6 +61,7 @@ bool DwarfModelProxy::filterAcceptsRow(int source_row, const QModelIndex &source
     bool matches = true;
 
     int dwarf_id = 0;
+    QSettings *s = DT->user_settings();
     const DwarfModel *m = get_dwarf_model();
     if (m->current_grouping() == DwarfModel::GB_NOTHING) {
         QModelIndex idx = m->index(source_row, 0, source_parent);
@@ -94,6 +96,29 @@ bool DwarfModelProxy::filterAcceptsRow(int source_row, const QModelIndex &source
             matches = matches && m_engine->evaluate(m_active_filter_script).toBool();
         }
     }
+
+    //filter children and babies if necessary
+    bool hide_children = s->value("options/hide_children_and_babies",
+                                       false).toBool();
+    if(dwarf_id && hide_children) {
+        Dwarf *d = m->get_dwarf_by_id(dwarf_id);
+
+        short baby_id = -1;
+        short child_id = -1;
+        foreach(Profession *p, GameDataReader::ptr()->get_professions()) {
+            if (p->name(true) == "Baby") {
+                baby_id = p->id();
+            }
+            if (p->name(true) == "Child") {
+                child_id = p->id();
+            }
+            if(baby_id > 0 && child_id > 0)
+                break;
+        }
+        matches = (d->raw_profession() != baby_id &&
+                   d->raw_profession() != child_id);
+    }
+
     return matches;
 }
 
